--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,15 @@
 body {
-  color: '#d2ff40';
-  font: 500 1em Helvetica, sans-serif;
+  color: '#000000';
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizelegibility;
+  width: 100%;
+  background-color: #e2e2e2;
+  padding-left: 100px;
+  padding-right: 100px;
+  height: 100vh;
   margin: 0;
-  padding: 0;
-  background-color: #0b0e14;
+  align-items: center;
+  vertical-align: middle;
 }
 
 *:focus {
@@ -14,11 +18,21 @@ body {
 
 * {
   box-sizing: border-box;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.main {
+  width: 100%;
+  height: 100%;
+  display: table;
 }
 
 .title {
-  color: #d2ff40;
-  padding: 20px;
+  color: black;
+}
+
+svg {
+  font-family: none !important;
 }
 
 .Dropzone-img {
@@ -26,7 +40,7 @@ body {
   max-height: calc(100vw - 60px);
   width: 640px;
   height: 640px;
-  border: thin solid rgba(64, 64, 64, 0.15);
+  border: thin solid rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   object-fit: cover;
 }
@@ -36,13 +50,11 @@ body {
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  border: thin solid #d2ff40;
-  background: #0b0e14;
+  background: transparent;
   max-width: calc(100vw - 40px);
   max-height: calc(100vw - 40px);
   width: 660px;
   height: 660px;
-  padding: 20px;
   border-radius: 0px;
   position: relative;
 }
@@ -53,6 +65,10 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  /* background-image: url('/img/4.png'); */
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .prediction {
@@ -64,6 +80,71 @@ body {
   padding: 10px 10px 0 10px;
 }
 
+.landing {
+  background-color: white;
+  vertical-align: middle;
+  display: table-cell;
+}
+
+#landing_card {
+  background-color: white;
+  height: 100%;
+}
+
+#top_part {
+  background-color: white;
+  padding: 50px;
+}
+
+#home_icon {
+  background-color: white;
+}
+
+#home_icon > * {
+  background-color: white;
+  width: 360px;
+}
+
+#landing_card_left_half {
+  display: grid;
+  height: 100%;
+  width: 60%;
+  float: left;
+  background-color: white;
+  padding: 50px;
+}
+
+.landing_card_title_group {
+  padding: 100px 0;
+  width: 100%;
+}
+
+#landing_card_title {
+  font-size: 50px;
+  line-height: 50px;
+  padding:0;
+  margin: 0;
+}
+
+#landing_card_subtitle {
+  font-size: 20px;
+}
+
+#landing_card_description {
+  width: 60%;
+  line-height: 25px;
+  padding:0;
+  margin:20px 0;
+  font-weight: 300;
+}
+
+#landing_card_right_half {
+  width: 40%;
+  float: right;
+  background-color: white;
+  padding:50px;
+}
+
 #canvas {
   position: absolute;
   top: 10px;
@@ -72,7 +153,26 @@ body {
   right: 10px;
 }
 
-@media only screen and (max-width: 700px) {
+
+#cta {
+  color: white;
+  background-color: black;
+  padding: 20px;
+}
+
+#gmbf_logo {
+  width: 256px;
+}
+
+.image_row {
+  height: 49%;
+}
+
+.image_in_square > *{
+  width: 49%;
+}
+
+@media only screen and (max-width: 1200px) {
   #canvas {
     position: absolute;
     top: 0px;
@@ -82,6 +182,20 @@ body {
     height: 100%;
     width: 100%;
   }
+
+  #landing_card_right_half {
+    float:none;
+    width: 100%;
+  }
   
+  #landing_card_left_half {
+    float:none;
+    width: 100%;
+  }
+
+  body {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
