--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@ body {
   text-rendering: optimizelegibility;
   width: 100%;
   background-color: #ffffff;
+  padding-top: 50px;
   padding-left: 300px;
   padding-right: 300px;
   height: 100%;
@@ -17,8 +18,6 @@ body {
 }
 
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -95,7 +94,7 @@ svg {
 
 #top_part {
   background-color: white;
-  padding: 50px;
+  margin: 20px;
 }
 
 #home_icon {
@@ -186,6 +185,15 @@ svg {
   .Dropzone {
     margin-bottom: 5px;
   }
+  #top_part {
+    align-items: center;
+    padding: 0 20px;
+    text-align: center;
+  }
+  #home_icon > img {
+    max-width: 600px;
+  }
+
   #canvas {
     position: absolute;
     top: 0px;
@@ -203,6 +211,16 @@ svg {
     display:block;
   }
   
+  #landing_card_title {
+    text-align: center;
+  }
+
+  #landing_card_description {
+    text-align: center;
+    width: auto;
+    padding: 0 15px;
+  }
+
   #landing_card_left_half {
     float:none;
     width: 100%;
@@ -218,10 +236,6 @@ svg {
     background-color: white;
     padding-left: 0;
     padding-right: 0;
-  }
-
-  #top_part {
-    padding: 0px 40px 10px;
   }
 
   #home_icon > * {
