--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,16 @@
+html {
+  display: table;
+  margin: auto;
+}
 body {
+  display: table;
   color: '#000000';
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizelegibility;
   max-width: 1800px;
   background-color: white;
   height: 100%;
-  margin: 0 40px;
+  margin: auto 40px;
   border: 1px black solid;
   padding: 0px !important;
   align-items: center;
